# agentic-learn

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  california_housing.py  ds_workflows.py  synth_classification.py  synth_high_dim.py  synth_multiclass.py  synth_regression.py  synth_temporal_regression.py  titanic.py  usage.py
experiments/: README.md  generate_setup.py  run_arena.py  run_modal_arena.py
experiments/configs/: contestants.example.json
output/california_housing/: best_solution.py  journal.jsonl
output/california_housing/step_000/: .agent_response.md  result.json  solution.py
output/california_housing/step_002/: .agent_response.md  result.json
output/synth_clf/: best_solution.py  journal.jsonl  report.md
output/synth_clf/_report/: .agent_response.md  trace.jsonl
output/synth_clf/step_000/: .agent_response.md  result.json  solution.py  trace.jsonl
output/synth_clf/step_001/: .agent_response.md  result.json  solution.py  trace.jsonl
output/synth_clf/step_002/: .agent_response.md  exploration.md  result.json  solution.py  trace.jsonl
output/synth_clf/step_003/: .agent_response.md  result.json  solution.py  trace.jsonl
output/synth_clf/step_004/: trace.jsonl
output/synth_clf/step_005/: .agent_response.md  exploration.md  result.json  trace.jsonl
output/synth_clf/step_006/: trace.jsonl
output/synth_clf/step_007/: trace.jsonl
output/synth_clf/step_008/: trace.jsonl
output/synth_clf/step_009/: trace.jsonl
output/synth_reg/: journal.jsonl  report.md
output/synth_reg/step_000/: .agent_response.md  result.json  solution.py
output/titanic/: journal.jsonl
src/agentic_learn/: __init__.py  cli.py  journal.py
src/aglearn/: __init__.py  agent.py  journal.py  loop.py  synth.py  synth_hard.py
src/aglearn_experiments/: __init__.py  arena.py  benchmarks.py  modal_backend.py  modal_worker.py
systems/mlebench/: Dockerfile  README.md  config.yaml  pyproject.toml  start.sh
systems/mlebench/src/: __init__.py  agent.py  budget.py  ensemble.py  llm.py  memory.py  modal_runner.py  prompts.py  reflector.py  runner.py  search.py  task_parser.py  validator.py
systems/mlebench/src/templates/: __init__.py  audio.py  image.py  tabular.py  text.py
systems/mlebench/tests/: test_runner.py  test_task_parser.py
tests/: __init__.py  test_agent.py  test_agent_integration.py  test_cli.py  test_core.py  test_experiments.py  test_extensions.py  test_imports.py  test_journal.py  test_loop.py  test_sandbox.py  test_session.py  test_synth.py  test_synth_hard.py  test_tools.py
(+51 files in other folders)
