[project]
name = "agentic-learn"
version = "0.1.0"
description = "Minimal, extensible ML/DS agent harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
gpu = [
    "pynvml>=11.5.0",
]
data = [
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "datasets>=3.0.0",
]
experiment = [
    "mlflow>=2.16.0",
    "wandb>=0.18.0",
]
ray = [
    "ray[default]>=2.35.0",
]
all = [
    "agentic-learn[gpu,data,experiment,ray]",
]

[project.scripts]
ds-agent = "agentic_learn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_learn"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
