[project]
name = "agentic-learn"
version = "0.1.0"
description = "Self-evolving MLE agent framework"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_learn"]
