[project]
name = "agentic-learn"
version = "0.1.0"
description = "Self-evolving MLE agent framework"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aglearn", "src/aglearn_experiments"]
