[project]
name = "agentic-learn-mlebench"
version = "0.1.0"
description = "MLE-bench competition agent built on agentic-learn"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
